--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,5 +18,6 @@ jobs:
       - name: Push APK to Releases
         uses: ncipollo/release-action@v1
         with:
+          tag: v1.0.1
           artifacts: "build/app/outputs/apk/debug/*.apk"
           token: ${{ secrets.TOKEN }}
